the SVN repository on R-Forge.


     CHANGES IN VERSION 1.5-3 (2020-07-26)

* stdEr returns NA-vector when Hessian missing

* the preferred way to query number of obs is 'stats4::nobs',
  not 'miscTools::nObs'

* maxBFGS and other optim-based methods: documentation mentions that
  the function value output is negative when requesting with printLevel


     CHANGES IN VERSION 1.5-2 (2020-07-26)

* fixed superfluous export commands in Namespace


     CHANGES IN VERSION 1.5-0 (2020-07-26)

* maxLik methods for 'tidy' and 'glance' generics (by David Hugh-Jones)

* maxLik method for 'confint' (by Luca Scrucca)

* most tests moved to 'tinytest' package

* fixed an issue with negative reltol values


     CHANGES IN VERSION 1.4-8 (2020-03-22)

* added two vignettes: "Getting started with maximum likelihood and maxLik" and
   "maximum likelihood estimation with maxLik"


     CHANGES IN VERSION 1.4-6 (2020-11-24)

* changed the name of internal function head... to headDots to avoid issues
  with perforce VCS

* maxNR and friends now correctly return code 8 if reltol stopping condition invoked

* documentation fixes and clean-ups


     CHANGES IN VERSION 1.4-4 (2020-07-08)

* fixed another issue with CRAN tests on ATLAS


     CHANGES IN VERSION 1.4-2 (2020-07-08)

* fixed CRAN test issues


      CHANGES IN VERSION 1.4-0 (2020-07-07)

* includes stochastic gradient ascent and Adam optimizer


      CHANGES IN VERSION 1.3-10 (2020-05-13)

* fixed an issue where maxControl() silently ignored a number of
  parameters

* print.summary.maxim accepts parameters max.rows and max.cols,
  and only prints this many columns/rows of output matrices


      CHANGES IN VERSION 1.3-8 (2019-05-18)

* better handling of matrix class


      CHANGES IN VERSION 1.3-8 (2020-01-01)

* better handling of matrix class


      CHANGES IN VERSION 1.3-6 (2019-05-18)

* 'maxim' objects now support 'maxValue' and 'gradient' methods.
* tests cleaned and give fewer notes on check

